k8s/apps/mail-proxy.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mail-external
  namespace: websites
subsets:
  - addresses:
      - ip: 10.1.0.80
    ports:
      - port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mail-external
  namespace: websites
spec:
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-external
  namespace: websites
spec:
  ingressClassName: traefik
  rules:
    - host: mail.danapfel-digital.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mail-external
                port:
                  number: 80
